--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "css": "postcss public/css/tailwind.css -o public/css/app.css  --watch",
     "js": "webpack --watch",
     "dev": "concurrently \"npm run css\" \"npm run js\"",
-    "db:importar" : "node ./seed/seeder.js -i",
-    "db:eliminar" : "node ./seed/seeder.js -e"
+    "db:importar": "node ./seed/seeder.js -i",
+    "db:eliminar": "node ./seed/seeder.js -e"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "dropzone": "^5.9.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
